[gd_scene load_steps=3 format=2]

[ext_resource path="res://scences/GameSystem.gd" type="Script" id=1]
[ext_resource path="res://scences/MainMenu.gd" type="Script" id=2]

[node name="GameSystem" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartServerButton" type="Button" parent="Control/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -10.0
margin_right = 42.5
margin_bottom = 10.0
text = "Start Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartClientButton" type="Button" parent="Control/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = 28.1406
margin_right = 42.5
margin_bottom = 48.1406
text = "Start Client"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatPanel" type="Panel" parent="Control"]
visible = false
self_modulate = Color( 1, 1, 1, 0.376471 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -370.0
margin_right = 643.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control/ChatPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
clear_button_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ChatPanel"]
anchor_right = 1.0
anchor_bottom = 0.924
margin_bottom = 0.119995
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/MainMenu/StartServerButton" to="." method="_on_StartServerButton_pressed"]
[connection signal="pressed" from="Control/MainMenu/StartServerButton" to="Control/MainMenu" method="_on_StartServerButton_pressed"]
[connection signal="pressed" from="Control/MainMenu/StartClientButton" to="." method="_on_StartClientButton_pressed"]
[connection signal="pressed" from="Control/MainMenu/StartClientButton" to="Control/MainMenu" method="_on_StartClientButton_pressed"]
[connection signal="text_entered" from="Control/ChatPanel/LineEdit" to="." method="_on_LineEdit_text_entered"]
